Robot_simulator/Robot_simulator/Grammar/RobotLanguageParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g 2012-02-08 18:34:20

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class RobotLanguageParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ATTR", "COMM", "DATE", "DIN", "DOUT", "FRAME", "GROUP", "INDEKS", "INST", "INT", "JOB", "MOVC", "MOVJ", "MOVL", "MOVS", "NAME", "NEWLINE", "NIZ", "NPOS", "POS", "POSTYPE", "RCONF", "REAL", "RECTAN", "TIME", "TIMER", "TOOL", "USER", "WS", "','", "'-'", "'/'", "'0'", "'1'", "'='", "'A'", "'END'", "'NOP'", "'PULSE'", "'USER'", "'V'", "'VJ'", "'Z'"
	};
	public const int EOF=-1;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int ATTR=4;
	public const int COMM=5;
	public const int DATE=6;
	public const int DIN=7;
	public const int DOUT=8;
	public const int FRAME=9;
	public const int GROUP=10;
	public const int INDEKS=11;
	public const int INST=12;
	public const int INT=13;
	public const int JOB=14;
	public const int MOVC=15;
	public const int MOVJ=16;
	public const int MOVL=17;
	public const int MOVS=18;
	public const int NAME=19;
	public const int NEWLINE=20;
	public const int NIZ=21;
	public const int NPOS=22;
	public const int POS=23;
	public const int POSTYPE=24;
	public const int RCONF=25;
	public const int REAL=26;
	public const int RECTAN=27;
	public const int TIME=28;
	public const int TIMER=29;
	public const int TOOL=30;
	public const int USER=31;
	public const int WS=32;

	public RobotLanguageParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public RobotLanguageParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return RobotLanguageParser.tokenNames; } }
	public override string GrammarFileName { get { return "D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_start();
	partial void LeaveRule_start();

	// $ANTLR start "start"
	// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:10:8: public start : prog ;
	[GrammarRule("start")]
	public AstParserRuleReturnScope<CommonTree, IToken> start()
	{
		EnterRule_start();
		EnterRule("start", 1);
		TraceIn("start", 1);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, IToken> prog1 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		try { DebugEnterRule(GrammarFileName, "start");
		DebugLocation(10, 7);
		try
		{
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:11:2: ( prog )
			DebugEnterAlt(1);
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:11:4: prog
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(11, 4);
			PushFollow(Follow._prog_in_start37);
			prog1=prog();
			PopFollow();

			adaptor.AddChild(root_0, prog1.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("start", 1);
			LeaveRule("start", 1);
			LeaveRule_start();
		}
		DebugLocation(11, 7);
		} finally { DebugExitRule(GrammarFileName, "start"); }
		return retval;

	}
	// $ANTLR end "start"

	partial void EnterRule_prog();
	partial void LeaveRule_prog();

	// $ANTLR start "prog"
	// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:13:1: prog : job name pos npos user tool postype rectan rconf ( cindeks )+ inst date comm attr frame group main -> job name pos npos user tool postype rectan rconf ( cindeks )+ inst date comm attr frame group main ;
	[GrammarRule("prog")]
	private AstParserRuleReturnScope<CommonTree, IToken> prog()
	{
		EnterRule_prog();
		EnterRule("prog", 2);
		TraceIn("prog", 2);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, IToken> job2 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> name3 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> pos4 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> npos5 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> user6 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> tool7 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> postype8 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> rectan9 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> rconf10 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> cindeks11 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> inst12 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> date13 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> comm14 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> attr15 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> frame16 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> group17 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> main18 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		RewriteRuleSubtreeStream stream_comm=new RewriteRuleSubtreeStream(adaptor,"rule comm");
		RewriteRuleSubtreeStream stream_rectan=new RewriteRuleSubtreeStream(adaptor,"rule rectan");
		RewriteRuleSubtreeStream stream_tool=new RewriteRuleSubtreeStream(adaptor,"rule tool");
		RewriteRuleSubtreeStream stream_job=new RewriteRuleSubtreeStream(adaptor,"rule job");
		RewriteRuleSubtreeStream stream_attr=new RewriteRuleSubtreeStream(adaptor,"rule attr");
		RewriteRuleSubtreeStream stream_inst=new RewriteRuleSubtreeStream(adaptor,"rule inst");
		RewriteRuleSubtreeStream stream_date=new RewriteRuleSubtreeStream(adaptor,"rule date");
		RewriteRuleSubtreeStream stream_main=new RewriteRuleSubtreeStream(adaptor,"rule main");
		RewriteRuleSubtreeStream stream_pos=new RewriteRuleSubtreeStream(adaptor,"rule pos");
		RewriteRuleSubtreeStream stream_postype=new RewriteRuleSubtreeStream(adaptor,"rule postype");
		RewriteRuleSubtreeStream stream_frame=new RewriteRuleSubtreeStream(adaptor,"rule frame");
		RewriteRuleSubtreeStream stream_name=new RewriteRuleSubtreeStream(adaptor,"rule name");
		RewriteRuleSubtreeStream stream_rconf=new RewriteRuleSubtreeStream(adaptor,"rule rconf");
		RewriteRuleSubtreeStream stream_group=new RewriteRuleSubtreeStream(adaptor,"rule group");
		RewriteRuleSubtreeStream stream_user=new RewriteRuleSubtreeStream(adaptor,"rule user");
		RewriteRuleSubtreeStream stream_cindeks=new RewriteRuleSubtreeStream(adaptor,"rule cindeks");
		RewriteRuleSubtreeStream stream_npos=new RewriteRuleSubtreeStream(adaptor,"rule npos");
		try { DebugEnterRule(GrammarFileName, "prog");
		DebugLocation(13, 199);
		try
		{
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:13:6: ( job name pos npos user tool postype rectan rconf ( cindeks )+ inst date comm attr frame group main -> job name pos npos user tool postype rectan rconf ( cindeks )+ inst date comm attr frame group main )
			DebugEnterAlt(1);
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:13:8: job name pos npos user tool postype rectan rconf ( cindeks )+ inst date comm attr frame group main
			{
			DebugLocation(13, 8);
			PushFollow(Follow._job_in_prog45);
			job2=job();
			PopFollow();

			stream_job.Add(job2.Tree);
			DebugLocation(13, 12);
			PushFollow(Follow._name_in_prog47);
			name3=name();
			PopFollow();

			stream_name.Add(name3.Tree);
			DebugLocation(13, 17);
			PushFollow(Follow._pos_in_prog49);
			pos4=pos();
			PopFollow();

			stream_pos.Add(pos4.Tree);
			DebugLocation(13, 21);
			PushFollow(Follow._npos_in_prog51);
			npos5=npos();
			PopFollow();

			stream_npos.Add(npos5.Tree);
			DebugLocation(13, 26);
			PushFollow(Follow._user_in_prog53);
			user6=user();
			PopFollow();

			stream_user.Add(user6.Tree);
			DebugLocation(13, 31);
			PushFollow(Follow._tool_in_prog55);
			tool7=tool();
			PopFollow();

			stream_tool.Add(tool7.Tree);
			DebugLocation(13, 36);
			PushFollow(Follow._postype_in_prog57);
			postype8=postype();
			PopFollow();

			stream_postype.Add(postype8.Tree);
			DebugLocation(13, 44);
			PushFollow(Follow._rectan_in_prog59);
			rectan9=rectan();
			PopFollow();

			stream_rectan.Add(rectan9.Tree);
			DebugLocation(13, 51);
			PushFollow(Follow._rconf_in_prog61);
			rconf10=rconf();
			PopFollow();

			stream_rconf.Add(rconf10.Tree);
			DebugLocation(13, 57);
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:13:57: ( cindeks )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==INDEKS))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:13:57: cindeks
					{
					DebugLocation(13, 57);
					PushFollow(Follow._cindeks_in_prog63);
					cindeks11=cindeks();
					PopFollow();

					stream_cindeks.Add(cindeks11.Tree);

					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(13, 66);
			PushFollow(Follow._inst_in_prog66);
			inst12=inst();
			PopFollow();

			stream_inst.Add(inst12.Tree);
			DebugLocation(13, 71);
			PushFollow(Follow._date_in_prog68);
			date13=date();
			PopFollow();

			stream_date.Add(date13.Tree);
			DebugLocation(13, 76);
			PushFollow(Follow._comm_in_prog70);
			comm14=comm();
			PopFollow();

			stream_comm.Add(comm14.Tree);
			DebugLocation(13, 81);
			PushFollow(Follow._attr_in_prog72);
			attr15=attr();
			PopFollow();

			stream_attr.Add(attr15.Tree);
			DebugLocation(13, 86);
			PushFollow(Follow._frame_in_prog74);
			frame16=frame();
			PopFollow();

			stream_frame.Add(frame16.Tree);
			DebugLocation(13, 92);
			PushFollow(Follow._group_in_prog76);
			group17=group();
			PopFollow();

			stream_group.Add(group17.Tree);
			DebugLocation(13, 98);
			PushFollow(Follow._main_in_prog78);
			main18=main();
			PopFollow();

			stream_main.Add(main18.Tree);


			{
			// AST REWRITE
			// elements: job, tool, inst, pos, group, attr, frame, date, name, rconf, comm, user, postype, main, npos, cindeks, rectan
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 13:103: -> job name pos npos user tool postype rectan rconf ( cindeks )+ inst date comm attr frame group main
			{
				DebugLocation(13, 106);
				adaptor.AddChild(root_0, stream_job.NextTree());
				DebugLocation(13, 110);
				adaptor.AddChild(root_0, stream_name.NextTree());
				DebugLocation(13, 115);
				adaptor.AddChild(root_0, stream_pos.NextTree());
				DebugLocation(13, 119);
				adaptor.AddChild(root_0, stream_npos.NextTree());
				DebugLocation(13, 124);
				adaptor.AddChild(root_0, stream_user.NextTree());
				DebugLocation(13, 129);
				adaptor.AddChild(root_0, stream_tool.NextTree());
				DebugLocation(13, 134);
				adaptor.AddChild(root_0, stream_postype.NextTree());
				DebugLocation(13, 142);
				adaptor.AddChild(root_0, stream_rectan.NextTree());
				DebugLocation(13, 149);
				adaptor.AddChild(root_0, stream_rconf.NextTree());
				DebugLocation(13, 155);
				if (!(stream_cindeks.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_cindeks.HasNext )
				{
					DebugLocation(13, 155);
					adaptor.AddChild(root_0, stream_cindeks.NextTree());

				}
				stream_cindeks.Reset();
				DebugLocation(13, 164);
				adaptor.AddChild(root_0, stream_inst.NextTree());
				DebugLocation(13, 169);
				adaptor.AddChild(root_0, stream_date.NextTree());
				DebugLocation(13, 174);
				adaptor.AddChild(root_0, stream_comm.NextTree());
				DebugLocation(13, 179);
				adaptor.AddChild(root_0, stream_attr.NextTree());
				DebugLocation(13, 184);
				adaptor.AddChild(root_0, stream_frame.NextTree());
				DebugLocation(13, 190);
				adaptor.AddChild(root_0, stream_group.NextTree());
				DebugLocation(13, 196);
				adaptor.AddChild(root_0, stream_main.NextTree());

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("prog", 2);
			LeaveRule("prog", 2);
			LeaveRule_prog();
		}
		DebugLocation(13, 199);
		} finally { DebugExitRule(GrammarFileName, "prog"); }
		return retval;

	}
	// $ANTLR end "prog"

	partial void EnterRule_job();
	partial void LeaveRule_job();

	// $ANTLR start "job"
	// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:15:1: job : JOB ;
	[GrammarRule("job")]
	private AstParserRuleReturnScope<CommonTree, IToken> job()
	{
		EnterRule_job();
		EnterRule("job", 3);
		TraceIn("job", 3);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken JOB19 = default(IToken);

		CommonTree JOB19_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "job");
		DebugLocation(15, 10);
		try
		{
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:15:6: ( JOB )
			DebugEnterAlt(1);
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:15:8: JOB
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(15, 8);
			JOB19=(IToken)Match(input,JOB,Follow._JOB_in_job124); 
			JOB19_tree = (CommonTree)adaptor.Create(JOB19);
			adaptor.AddChild(root_0, JOB19_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("job", 3);
			LeaveRule("job", 3);
			LeaveRule_job();
		}
		DebugLocation(15, 10);
		} finally { DebugExitRule(GrammarFileName, "job"); }
		return retval;

	}
	// $ANTLR end "job"

	partial void EnterRule_name();
	partial void LeaveRule_name();

	// $ANTLR start "name"
	// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:16:1: name : NAME NIZ ;
	[GrammarRule("name")]
	private AstParserRuleReturnScope<CommonTree, IToken> name()
	{
		EnterRule_name();
		EnterRule("name", 4);
		TraceIn("name", 4);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken NAME20 = default(IToken);
		IToken NIZ21 = default(IToken);

		CommonTree NAME20_tree = default(CommonTree);
		CommonTree NIZ21_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "name");
		DebugLocation(16, 15);
		try
		{
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:16:6: ( NAME NIZ )
			DebugEnterAlt(1);
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:16:8: NAME NIZ
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(16, 8);
			NAME20=(IToken)Match(input,NAME,Follow._NAME_in_name131); 
			NAME20_tree = (CommonTree)adaptor.Create(NAME20);
			adaptor.AddChild(root_0, NAME20_tree);
			DebugLocation(16, 13);
			NIZ21=(IToken)Match(input,NIZ,Follow._NIZ_in_name133); 
			NIZ21_tree = (CommonTree)adaptor.Create(NIZ21);
			adaptor.AddChild(root_0, NIZ21_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("name", 4);
			LeaveRule("name", 4);
			LeaveRule_name();
		}
		DebugLocation(16, 15);
		} finally { DebugExitRule(GrammarFileName, "name"); }
		return retval;

	}
	// $ANTLR end "name"

	partial void EnterRule_pos();
	partial void LeaveRule_pos();

	// $ANTLR start "pos"
	// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:17:1: pos : POS ;
	[GrammarRule("pos")]
	private AstParserRuleReturnScope<CommonTree, IToken> pos()
	{
		EnterRule_pos();
		EnterRule("pos", 5);
		TraceIn("pos", 5);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken POS22 = default(IToken);

		CommonTree POS22_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "pos");
		DebugLocation(17, 9);
		try
		{
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:17:5: ( POS )
			DebugEnterAlt(1);
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:17:7: POS
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(17, 7);
			POS22=(IToken)Match(input,POS,Follow._POS_in_pos140); 
			POS22_tree = (CommonTree)adaptor.Create(POS22);
			adaptor.AddChild(root_0, POS22_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("pos", 5);
			LeaveRule("pos", 5);
			LeaveRule_pos();
		}
		DebugLocation(17, 9);
		} finally { DebugExitRule(GrammarFileName, "pos"); }
		return retval;

	}
	// $ANTLR end "pos"

	partial void EnterRule_npos();
	partial void LeaveRule_npos();

	// $ANTLR start "npos"
	// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:18:1: npos : NPOS INT ( ( ',' )? ( '-' )? INT )+ ;
	[GrammarRule("npos")]
	private AstParserRuleReturnScope<CommonTree, IToken> npos()
	{
		EnterRule_npos();
		EnterRule("npos", 6);
		TraceIn("npos", 6);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken NPOS23 = default(IToken);
		IToken INT24 = default(IToken);
		IToken char_literal25 = default(IToken);
		IToken char_literal26 = default(IToken);
		IToken INT27 = default(IToken);

		CommonTree NPOS23_tree = default(CommonTree);
		CommonTree INT24_tree = default(CommonTree);
		CommonTree char_literal25_tree = default(CommonTree);
		CommonTree char_literal26_tree = default(CommonTree);
		CommonTree INT27_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "npos");
		DebugLocation(18, 32);
		try
		{
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:18:6: ( NPOS INT ( ( ',' )? ( '-' )? INT )+ )
			DebugEnterAlt(1);
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:18:8: NPOS INT ( ( ',' )? ( '-' )? INT )+
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(18, 8);
			NPOS23=(IToken)Match(input,NPOS,Follow._NPOS_in_npos147); 
			NPOS23_tree = (CommonTree)adaptor.Create(NPOS23);
			adaptor.AddChild(root_0, NPOS23_tree);
			DebugLocation(18, 13);
			INT24=(IToken)Match(input,INT,Follow._INT_in_npos149); 
			INT24_tree = (CommonTree)adaptor.Create(INT24);
			adaptor.AddChild(root_0, INT24_tree);
			DebugLocation(18, 17);
			// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:18:17: ( ( ',' )? ( '-' )? INT )+
			int cnt4=0;
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				int LA4_0 = input.LA(1);

				if ((LA4_0==INT||(LA4_0>=33 && LA4_0<=34)))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch (alt4)
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:18:18: ( ',' )? ( '-' )? INT
					{
					DebugLocation(18, 18);
					// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:18:18: ( ',' )?
					int alt2=2;
					try { DebugEnterSubRule(2);
					try { DebugEnterDecision(2, false);
					int LA2_0 = input.LA(1);

					if ((LA2_0==33))
					{
						alt2 = 1;
					}
					} finally { DebugExitDecision(2); }
					switch (alt2)
					{
					case 1:
						DebugEnterAlt(1);
						// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:18:18: ','
						{
						DebugLocation(18, 18);
						char_literal25=(IToken)Match(input,33,Follow._33_in_npos152); 
						char_literal25_tree = (CommonTree)adaptor.Create(char_literal25);
						adaptor.AddChild(root_0, char_literal25_tree);

						}
						break;

					}
					} finally { DebugExitSubRule(2); }

					DebugLocation(18, 23);
					// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:18:23: ( '-' )?
					int alt3=2;
					try { DebugEnterSubRule(3);
					try { DebugEnterDecision(3, false);
					int LA3_0 = input.LA(1);

					if ((LA3_0==34))
					{
						alt3 = 1;
					}
					} finally { DebugExitDecision(3); }
					switch (alt3)
					{
					case 1:
						DebugEnterAlt(1);
						// D:\\Faks\\2. letnik\\Robotizacija\\RobotLanguage.g:18:23: '-'
						{
						DebugLocation(18, 23);
						char_literal26=(IToken)Match(input,34,Follow._34_in_npos155); 
						char_literal26_tree = (CommonTree)adaptor.Create(char_literal26);
						adaptor.AddChild(root_0, char_literal26_tree);

						}
						break;

					}
					} finally { DebugExitSubRule(3); }

					DebugLocation(18, 28);
					INT27=(IToken)Match(input,INT,Follow._INT_in_npos158); 
					INT27_tree = (CommonTree)adaptor.Create(INT27);
					adaptor.AddChild(root_0, INT27_tree);

					}
					break;

				default:
					if (cnt4 >= 1)
						goto loop4;

					EarlyExitException eee4 = new EarlyExitException( 4, input );
					DebugRecognitionException(eee4);
					throw eee4;
				}
				cnt4++;
			}
			loop4:
				;

			} finally { DebugExitSubRule(4); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("npos", 6);
			LeaveRule("npos", 6);
			LeaveRule_npos();
		}
		DebugLocation(18, 32);
		} finally { DebugExitRule(GrammarFileName, "npos"); }
		return retval;

	}
	// $ANTLR end "npos"

